2007-01-13  Junichi Uekawa  <dancer@debian.org>

	* Makefile.am (upload-dist-all): change to aegis

	* realcxxsh.cc.1: create documentation

	* Makefile.am (dist_bin_SCRIPTS): add realcxxsh.cc, and realcxxsh.cc.1 manpage

2006-09-13  Junichi Uekawa  <dancer@debian.org>

	* realcsh.c.1: document that gcc options can be passed on.

	* realcsh.c (main): support header options

	* realcxxsh.cc: updated to use more C++ features

2006-09-10  Junichi Uekawa  <dancer@debian.org>

	* realcxxsh.cc: created

2006-09-03  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.12

	* realksh.c: fix memory leak when zero-sized line is input.

	* realcsh.c: fix memory leak when zero-sized line is input.
	load-tested with 
	  yes '' | realcsh.c
	  yes 'printf("hello\n");' | ./realcsh.c
	
2006-08-05  Junichi Uekawa  <dancer@debian.org>

	* realksh.c (main): clean up properly.

2006-01-08  Junichi Uekawa  <dancer@debian.org>

	* realksh.c (main): add a sched_yield for better timing.

2006-01-06  Junichi Uekawa  <dancer@debian.org>

	* NEWS: 0.10 release

	* configure.ac: 0.10 release

	* Makefile.am (dist_sbin_SCRIPTS): make realksh installed in sbin
	instead of bin

	* realksh.c.8: rename to 8, since it's only executable by root

2006-01-02  Junichi Uekawa  <dancer@debian.org>

	* tests/prerequisite.sh: update the test so that more things are
	tested here. If this test fails we know some essential something
	is missing, and further tests may fail.

	* debian/control (Description): update description to contain the
	full list of things that are really supported.

	* tests/realcsh.sh: test for realcsh functionality.

	* Makefile.am (TESTS): add test for realcsh.

	* realksh.c.1 (KMSG): update document to document that KMSG: is
	the prefix used for dmesg output

	* Makefile.am (TESTS): add test for realksh.

	* tests/realksh.sh: implement a test for realksh.

	* realksh.c: reorganize code a bit.

2006-01-01  Junichi Uekawa  <dancer@debian.org>

	* NEWS: note that realksh.c is added
